Fixed CS-1061   Search result form: Subject field is overlaped

--- a/eXoApplication/mail/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/eXoApplication/mail/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -589,13 +589,14 @@
 	border-left: none;
 	border-right: 1px solid #e8e8e8;
 	padding: 0px 0px 0px 6px;
+	white-space
 }
 
 .UIMailPortlet .UIMessageList .UIGrid td a {
 	display: block;
 	white-space: nowrap;
 	overflow: hidden ;
-	width: 100%;
+	width: 80%;
 }
 
 .UIMailPortlet .MailWorkingWorkspace .UIGrid .IconTag {
